# Evergreen-v3

./: .env.example  .gitignore  .replit  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  ROADMAP.md  cli.py  pyproject.toml
.claude/: settings.local.json
app/: main.py  models.py
app/core/: catalog.py  jobs.py  mapper.py  runner.py
app/routes/: benchmarks.py  builder.py  runs.py
app/templates/: base.html  builder.html  catalog.html  history.html  library.html  run_progress.html
app/templates/partials/: benchmark_card.html  benchmark_detail.html  case_row.html  run_status.html
catalog/: schema.yaml
catalog/benchmarks/: agentharm.yaml  arc_challenge.yaml  bbh.yaml  bbq.yaml  coconot.yaml  ifeval.yaml  mmlu_0_shot.yaml  simpleqa.yaml  strong_reject.yaml  truthfulqa.yaml
docs/: implementation-plan.md
tests/: conftest.py
tests/integration/: test_routes.py
tests/unit/: test_catalog.py  test_mapper.py
