[project]
name = "evergreen-v3"
version = "0.1.0"
description = "Browser-based AI evaluation platform for non-technical government staff"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.21",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "jsonschema>=4.23",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "inspect-ai>=0.3",
    "inspect-evals>=0.3",
    "weasyprint>=62",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
]

[project.scripts]
evergreen = "cli:app"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
